[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/mesh_creator/generators/GeneratorWindow.gd" type="Script" id=1]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="World" id=3]
environment = SubResource( 2 )

[sub_resource type="CubeMesh" id=4]

[node name="GeneratorWindow" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -24.0
margin_bottom = 40.0
rect_min_size = Vector2( 1000, 640 )
size_flags_horizontal = 0
size_flags_vertical = 0
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 15
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Types" type="PanelContainer" parent="HBoxContainer"]
margin_right = 254.0
margin_bottom = 640.0

[node name="TypeSelectList" type="VBoxContainer" parent="HBoxContainer/Types"]
margin_left = 7.0
margin_top = 7.0
margin_right = 247.0
margin_bottom = 633.0
rect_min_size = Vector2( 240, 0 )
custom_constants/separation = 8

[node name="BoxButton" type="Button" parent="HBoxContainer/Types/TypeSelectList"]
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Box"

[node name="PlaneButton" type="Button" parent="HBoxContainer/Types/TypeSelectList"]
margin_top = 40.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
text = "Plane"

[node name="StairsButton" type="Button" parent="HBoxContainer/Types/TypeSelectList"]
margin_top = 80.0
margin_right = 240.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 32 )
text = "Stairs"

[node name="GeneratorSettings" type="Panel" parent="HBoxContainer"]
margin_left = 254.0
margin_right = 680.0
margin_bottom = 640.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 680.0
margin_right = 1000.0
margin_bottom = 640.0
custom_constants/separation = 8

[node name="ModelPreview" type="ViewportContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
size_flags_stretch_ratio = 3.0

[node name="Viewport" type="Viewport" parent="HBoxContainer/VBoxContainer/ModelPreview"]
size = Vector2( 320, 320 )
own_world = true
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 0
gui_disable_input = true

[node name="PreviewModel" type="MeshInstance" parent="HBoxContainer/VBoxContainer/ModelPreview/Viewport"]
mesh = SubResource( 4 )
material/0 = null

[node name="Camera" type="Camera" parent="HBoxContainer/VBoxContainer/ModelPreview/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.868008, 0.49655, 0, -0.49655, 0.868008, 0, 2.64343, 4.4364 )

[node name="PreviewRotation" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 320.0
margin_bottom = 344.0
max_value = 360.0
rounded = true
ticks_on_borders = true

[node name="CreateButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 320.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 48 )
text = "CREATE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/Types/TypeSelectList/BoxButton" to="." method="on_type_select" binds= [ "box" ]]
[connection signal="pressed" from="HBoxContainer/Types/TypeSelectList/PlaneButton" to="." method="on_type_select" binds= [ "plane" ]]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/PreviewRotation" to="." method="_on_PreviewRotation_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CreateButton" to="." method="on_create_button_pressed"]
